--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/my-example.html"></include>
   </body>
 </html>
