--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,22 @@
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <!-- <include src="./partials/m-9-rep-1-task-2-subscription.html"></include> -->
     <include src="./partials/example.html"></include>
-    <include src="./partials/my-example.html"></include>
+
+    <!-- script для m-9-rep-1-task-2-subscription -->
+    <!-- <script type="module" src="./description.js"></script> -->
+
+    <script type="module" src="./example.js"></script>
   </body>
 </html>
