--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
     <!-- CSS only -->
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,11 +18,12 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/m-9-rep-1-task-2-subscription.html"></include> -->
+    <include src="./partials/date.html"></include>
     <include src="./partials/example.html"></include>
 
     <!-- script для m-9-rep-1-task-2-subscription -->
     <!-- <script type="module" src="./description.js"></script> -->
-
+    <script type="module" src="./date.js"></script>
     <script type="module" src="./example.js"></script>
   </body>
 </html>
