--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,13 @@
     <include src="./partials/date.html"></include>
     <include src="./partials/mod-10-abstract.html"></include>
     <include src="./partials/mod-10-repeta.html"></include>
-    <include src="./partials/example.html"></include>
+    <include src="./partials/mod-10-vebinar.html"></include>
 
     <!-- script для m-9-rep-1-task-2-subscription -->
     <!-- <script type="module" src="./description.js"></script> -->
     <script type="module" src="./date.js"></script>
     <script type="module" src="./mod-10-abstract.js"></script>
     <script type="module" src="./mod-10-repeta.js"></script>
-    <script type="module" src="./example.js"></script>
+    <script type="module" src="./mod-10-vebinar.js"></script>
   </body>
 </html>
