--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,16 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/first.html"></include>
+
     <!-- <include src="./partials/m-9-rep-1-task-2-subscription.html"></include> -->
     <include src="./partials/date.html"></include>
     <include src="./partials/mod-10-abstract.html"></include>
     <include src="./partials/mod-10-repeta.html"></include>
     <include src="./partials/mod-10-vebinar.html"></include>
+
+    <include src="./partials/mod-11-abstract.html"></include>
+    <include src="./partials/mod-11-repeta.html"></include>
 
     <!-- script для m-9-rep-1-task-2-subscription -->
     <!-- <script type="module" src="./description.js"></script> -->
@@ -29,5 +34,8 @@
     <script type="module" src="./mod-10-abstract.js"></script>
     <script type="module" src="./mod-10-repeta.js"></script>
     <script type="module" src="./mod-10-vebinar.js"></script>
+
+    <script type="module" src="./mod-11-abstract.js"></script>
+    <script type="module" src="./mod-11-repeta.js"></script>
   </body>
 </html>
