--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 
     <include src="./partials/mod-11-abstract.html"></include>
     <include src="./partials/mod-11-repeta.html"></include>
+    <include src="./partials/mod-11-vebinar.html"></include>
 
     <!-- script для m-9-rep-1-task-2-subscription -->
     <!-- <script type="module" src="./description.js"></script> -->
@@ -36,6 +37,9 @@
     <script type="module" src="./mod-10-vebinar.js"></script>
 
     <script type="module" src="./mod-11-abstract.js"></script>
-    <script type="module" src="./mod-11-repeta.js"></script>
+    <script type="module" src="./mod-11-repeta-1.js"></script>
+    <script type="module" src="./mod-11-repeta-2.js"></script>
+    <script type="module" src="./mod-11-vebinar-1.js"></script>
+    <script type="module" src="./mod-11-vebinar-2.js"></script>
   </body>
 </html>
